hphp/test/slow/reified_generics/function-3.php.expectf
Catchable fatal error: Argument 1 passed to c() must be an instance of C<(function (int): int)>, C<(function():int)> given in %s on line 10
